src/test/ui/associated-types/defaults-suitability.stderr
error[E0277]: the trait bound `NotClone: std::clone::Clone` is not satisfied
  --> $DIR/defaults-suitability.rs:13:5
   |
LL |     type Ty: Clone = NotClone;
   |     ^^^^^^^^^-----^^^^^^^^^^^^
   |     |        |
   |     |        required by this bound in `Tr::Ty`
   |     the trait `std::clone::Clone` is not implemented for `NotClone`

error[E0277]: the trait bound `NotClone: std::clone::Clone` is not satisfied
  --> $DIR/defaults-suitability.rs:22:5
   |
LL |     Self::Ty: Clone,
   |               ----- required by this bound in `Tr2::Ty`
LL | {
LL |     type Ty = NotClone;
   |     ^^^^^--^^^^^^^^^^^^
   |     |    |
   |     |    required by a bound in this
   |     the trait `std::clone::Clone` is not implemented for `NotClone`

error[E0277]: the trait bound `T: std::clone::Clone` is not satisfied
  --> $DIR/defaults-suitability.rs:28:5
   |
LL |     type Bar: Clone = Vec<T>;
   |     ^^^^^^^^^^-----^^^^^^^^^^
   |     |         |
   |     |         required by this bound in `Foo::Bar`
   |     the trait `std::clone::Clone` is not implemented for `T`
   |
   = note: required because of the requirements on the impl of `std::clone::Clone` for `std::vec::Vec<T>`
help: consider restricting type parameter `T`
   |
LL | trait Foo<T: std::clone::Clone> {
   |            ^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `(): Foo<Self>` is not satisfied
  --> $DIR/defaults-suitability.rs:34:5
   |
LL |     type Assoc: Foo<Self> = ();
   |     ^^^^^^^^^^^^---------^^^^^^
   |     |           |
   |     |           required by this bound in `Bar::Assoc`
   |     the trait `Foo<Self>` is not implemented for `()`

error[E0271]: type mismatch resolving `<Self as C>::Assoc == u8`
  --> $DIR/defaults-suitability.rs:47:5
   |
LL |     Self::Assoc: IsU8<Self::Assoc>,
   |                  ----------------- required by this bound in `C::Assoc`
...
LL |     type Assoc = u8;
   |     ^^^^^-----^^^^^^
   |     |    |
   |     |    required by a bound in this
   |     expected `u8`, found associated type
   |
   = note:         expected type `u8`
           found associated type `<Self as C>::Assoc`
   = help: consider constraining the associated type `<Self as C>::Assoc` to `u8`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error[E0271]: type mismatch resolving `<Self as D>::Assoc == u8`
  --> $DIR/defaults-suitability.rs:57:5
   |
LL |     Self::Assoc: IsU8<Self::Assoc>,
   |                  ----------------- required by this bound in `D::Assoc`
...
LL |     type Assoc = NotClone;
   |     ^^^^^-----^^^^^^^^^^^^
   |     |    |
   |     |    required by a bound in this
   |     expected `u8`, found associated type
   |
   = note:         expected type `u8`
           found associated type `<Self as D>::Assoc`
   = help: consider constraining the associated type `<Self as D>::Assoc` to `u8`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error[E0277]: the trait bound `<Self as Foo2<T>>::Baz: std::clone::Clone` is not satisfied
  --> $DIR/defaults-suitability.rs:66:5
   |
LL |     type Bar: Clone = Vec<Self::Baz>;
   |     ^^^^^^^^^^-----^^^^^^^^^^^^^^^^^^
   |     |         |
   |     |         required by this bound in `Foo2::Bar`
   |     the trait `std::clone::Clone` is not implemented for `<Self as Foo2<T>>::Baz`
   |
   = note: required because of the requirements on the impl of `std::clone::Clone` for `std::vec::Vec<<Self as Foo2<T>>::Baz>`
help: consider further restricting the associated type
   |
LL | trait Foo2<T> where <Self as Foo2<T>>::Baz: std::clone::Clone {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `<Self as Foo25<T>>::Baz: std::clone::Clone` is not satisfied
  --> $DIR/defaults-suitability.rs:75:5
   |
LL |     type Bar: Clone = Vec<Self::Baz>;
   |     ^^^^^^^^^^-----^^^^^^^^^^^^^^^^^^
   |     |         |
   |     |         required by this bound in `Foo25::Bar`
   |     the trait `std::clone::Clone` is not implemented for `<Self as Foo25<T>>::Baz`
   |
   = note: required because of the requirements on the impl of `std::clone::Clone` for `std::vec::Vec<<Self as Foo25<T>>::Baz>`
help: consider further restricting the associated type
   |
LL | trait Foo25<T: Clone> where <Self as Foo25<T>>::Baz: std::clone::Clone {
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `T: std::clone::Clone` is not satisfied
  --> $DIR/defaults-suitability.rs:88:5
   |
LL |     Self::Baz: Clone,
   |                ----- required by this bound in `Foo3::Baz`
...
LL |     type Baz = T;
   |     ^^^^^---^^^^^
   |     |    |
   |     |    required by a bound in this
   |     the trait `std::clone::Clone` is not implemented for `T`
   |
help: consider further restricting type parameter `T`
   |
LL |     Self::Baz: Clone, T: std::clone::Clone
   |                     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0271, E0277.
For more information about an error, try `rustc --explain E0271`.
